Fix padding on mobile

--- a/style.css
+++ b/style.css
@@ -99,5 +99,7 @@ article p.project-description {
 @media screen and (max-width: 768px) {
     main {
         max-width: 100%;
+        padding-left: 0;
+        padding-right: 0;
     }
 }
